# unbill

./: .gitattributes  .gitignore  Cargo.toml  DESIGN.md  IMPLEMENTATION.md  LICENSE  README.md  devenv.nix  devenv.yaml  package.json  pnpm-lock.yaml
.github/aur/unbill-bin/: PKGBUILD
.github/aur/unbill-cli-nightly-bin/: PKGBUILD
.github/aur/unbill-nightly-bin/: PKGBUILD
.github/aur/unbill-tui-nightly-bin/: PKGBUILD
.github/homebrew/unbill-cli/: install.rb
.github/homebrew/unbill-tui/: install.rb
.github/workflows/: build-release.yml  build.yml  ci.yml  nightly.yml  release-aur.yml  release-homebrew.yml  release.yml  version.yml
apps/: DESIGN.md
apps/unbill-cli/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
apps/unbill-cli/src/: commands.rs  main.rs  output.rs
apps/unbill-cli/tests/: e2e.rs
apps/unbill-desktop/: DESIGN.md  IMPLEMENTATION.md  tailwind.config.cjs
apps/unbill-desktop-leptos/: Cargo.toml  Trunk.toml  index.html  style.css
apps/unbill-desktop-leptos/src/: main.rs
apps/unbill-desktop/src/: App.tsx
apps/unbill-tui/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
apps/unbill-tui/src/: app.rs  ui.rs
apps/unbill-tui/src/pane/: bills.rs  ledger.rs  mod.rs
apps/unbill-tui/src/popup/: add_bill.rs  amend_bill.rs  confirm.rs  create_ledger.rs  device.rs  invite.rs  ledger_settings.rs  mod.rs  settings.rs  settlement.rs  users.rs
apps/unbill-ui-leptos/: Cargo.toml  DESIGN.md  style.css
apps/unbill-ui-leptos/src/: api.rs  app.rs  pages.rs
crates/unbill-cli/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
crates/unbill-cli/src/: commands.rs  main.rs  output.rs
crates/unbill-cli/tests/: e2e.rs
crates/unbill-core/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md  README.md
crates/unbill-core/src/: error.rs  lib.rs  path.rs
crates/unbill-core/src/conflict/: DESIGN.md  IMPLEMENTATION.md  mod.rs
crates/unbill-core/src/doc/: DESIGN.md  IMPLEMENTATION.md  ledger_doc.rs  ops.rs
crates/unbill-core/src/model/: DESIGN.md  IMPLEMENTATION.md  amendment.rs  bill.rs  currency.rs  id.rs  invite_token.rs  member.rs  mod.rs  node_id.rs  timestamp.rs  user.rs
crates/unbill-core/src/net/: DESIGN.md  IMPLEMENTATION.md  endpoint.rs  identity.rs  join.rs  mod.rs  protocol.rs  sync.rs  user.rs
crates/unbill-core/src/service/: DESIGN.md  IMPLEMENTATION.md  inner.rs  mod.rs  service.rs
crates/unbill-core/src/settlement/: DESIGN.md  IMPLEMENTATION.md  mod.rs
crates/unbill-core/src/storage/: DESIGN.md  IMPLEMENTATION.md  fs.rs  memory.rs  mod.rs  traits.rs
crates/unbill-tauri/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md  tauri.conf.json  tauri.leptos.conf.json
crates/unbill-tauri/capabilities/: default.json
crates/unbill-tauri/icons/: icon.icns
crates/unbill-tauri/src/: lib.rs
crates/unbill-tui/: Cargo.toml  DESIGN.md  IMPLEMENTATION.md
crates/unbill-tui/src/: app.rs  main.rs  ui.rs
crates/unbill-tui/src/pane/: bills.rs  detail.rs  ledger.rs  mod.rs
crates/unbill-tui/src/popup/: add_bill.rs  amend_bill.rs  confirm.rs  create_ledger.rs  device.rs  invite.rs  mod.rs  settlement.rs  users.rs
~/unbill-data/: identities.json
