[workspace]
resolver = "2"
members = [
    "apps/unbill-cli",
    "apps/unbill-tui",
    "apps/unbill-ui-leptos",
    "crates/unbill-core",
    "crates/unbill-tauri",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/unbill-project/unbill"
homepage = "https://github.com/unbill-project/unbill"
description = "Shared bill tracking"
publish = false

[workspace.dependencies]
# CRDT
automerge = "0.8"
autosurgeon = "0.11"

# Networking
iroh = "0.98.0"

# Async
tokio = { version = "1.52.1", features = ["full"] }
async-trait = "0.1"


# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# IDs
ulid = "1"

# Domain types
iso_currency = "0.5"
rand = "0.10.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Utilities
dashmap = "6"
directories = "6.0.0"

# Testing
proptest = "1"

[profile.release]
lto = true

[profile.release.package.unbill-tui]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.


[profile.release.package.unbill-cli]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.

