[package]
name = "unbill-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "unbill-tui"
path = "src/main.rs"

[dependencies]
unbill-core = { path = "../../crates/unbill-core" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3"
