[package]
name = "unbill-core"
description = "The core library for unbill — CRDT ledger, persistence, and P2P sync."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
automerge.workspace = true
autosurgeon.workspace = true
iroh.workspace = true
tokio.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
ulid.workspace = true
iso_currency.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
dirs.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
