[package]
name = "unbill-tauri"
description = "Tauri backend shell for unbill desktop."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "unbill_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
unbill-core = { path = "../unbill-core" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
